# ai-code

./: .env.example  .gitignore  CAD_ESTIMATOR_SUMMARY.md  CAD_ESTIMATOR_V2_README.md  CLAUDE.md  DEPLOYMENT_DIRECT_MOUNT.md  DOC_CONVERTER_TESTING.md  FAQ_ZARZAD_OBRONA.md  MIGRATION_GUIDE.md  PRZYKLADOWE_DANE_ESTYMATOR.md  README.md  README_NEW.md  SKRYPT_PREZENTACJI.md  SPRINT1_COMPLETE.md  SPRINT2_COMPLETE.md  SPRINT3_COMPLETE.md  UI-IMPROVEMENTS.md  cad_main.py  check-pyannote.sh  deploy-ai-updated.sh  deploy-direct.sh  doc-converter-chunked-audio.py  doc-converter-improved-ui.py  doc_converter.py  docker-compose.direct-mount.yml  docker-compose.doc-converter-refactored.yml  fix_imports.py  migrate-doc-converter.sh  pyproject.toml  test-doc-converter.sh
.claude-examples/: QUICK-START.md  README.md  hooks-example.json
.claude-examples/agents/: dataclass-validator.md  python-tester.md
.claude-examples/commands/: coverage-check.md  pipeline-test.md
.claude-examples/rules/: python-dataclasses.md
cad/: Dockerfile  README.md  requirements.txt
company-file-analyzer/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
company-file-analyzer/app/: __init__.py  config.py  db.py  main.py  routes_api.py  routes_ui.py
doc-analyzer/: .env.example  README.md  docker-compose.yml
doc-converter/: Dockerfile  Dockerfile.refactored  README.md  requirements.txt
docs/: DOC_CONVERTER_MIGRATION.md  HISTORIA_UCZENIE.md  IMPROVEMENT_PLAN.md  PRODUCTION_IMPROVEMENTS.md  QUICK_START_IMPROVEMENTS.md  TESTING_GUIDE.md
document-converter-pro/: Dockerfile.refactored  requirements.txt
examples/: usage_example.py
migrations/: 001_add_estimation_feedback.sql  002_add_component_embeddings.sql
pyannote/: Dockerfile  README.md  requirements.txt  server-fixed.py  server.py
scripts/: generate_component_embeddings.py
src/: __init__.py
tests/: __init__.py  test_multi_model_example.md  validate_multi_model.py
whisper-rocm/: Dockerfile  README.md  server.py
(+123 files in other folders)
